Change input placeholder text. Remove border radius from table header. Fix alignment of items in form.

--- a/src/app/advanced/advanced-view/advanced-view.component.scss
+++ b/src/app/advanced/advanced-view/advanced-view.component.scss
@@ -1,6 +1,8 @@
 .custom-form {
   width: 80%;
   margin-left: 10%;
+  display: flex;
+  align-items: center;
 }
 
 .mat-form-field {
@@ -16,8 +18,8 @@
 }
 
 .mat-form-field.query {
-  width: 50%;
-  margin-left: 5%;
+  width: 62%;
+  margin-left: 2%;
 }
 
 .mat-button {
@@ -25,7 +27,11 @@
 }
 
 .addButton {
-  margin-left: 5%;
+  margin-top: 15px;
+}
+
+.spacer {
+  flex: 1 1 auto;
 }
 
 .saveButton {
@@ -66,7 +72,6 @@ h2 {
   background-color: #EDC7B7;
   width: 100%;
   height: 10%;
-  border-radius: 5px;
   margin-bottom: 5px;
   padding: 5px 0 5px 0;
 }
